include/IPTABLES_RULES
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m tcp -p tcp --dport ${HOST_SSH_PORT} -j ACCEPT
-A INPUT -i rskvm0 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 100.64.0.0/10,10.0.0/8,172.16.0.0/12,192.168.0.0/16 -d 100.64.0.0/10,10.0.0/8,172.16.0.0/12,192.168.0.0/16 -j ACCEPT
-A POSTROUTING -s 100.64.0.0/10,10.0.0/8,172.16.0.0/12,192.168.0.0/16 -d 224.0.0.0/4 -j ACCEPT
-A POSTROUTING -s ${SUBNET} -d 255.255.255.255/32 -j ACCEPT
-A POSTROUTING -s ${SUBNET} -j MASQUERADE 
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o rskvm0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
